completed profile section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KHUSHI SHUKLA</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <section class="main-container">
+      <div class="first-half">
+        <img src="img/girl.jpg" alt="profile-image" class="profile-image" />
+        <div class="top-text">
+          <ion-icon
+            name="card"
+            style="width: 15px; color: rgb(245, 248, 245)"
+          ></ion-icon>
+          <p>SRS Funding</p>
+        </div>
+
+        <div class="intro">
+          <div class="name">Hi, Khushi Good Morning 👋</div>
+          <div class="n">Email : abc@gmail.com</div>
+          <div class="n">Phone : 9586327984</div>
+          <div class="n">Address : colony, london ( USA )</div>
+          <div class="n">Plan : 5.00 $</div>
+          <div class="n">Till 24 Feb 2025</div>
+        </div>
+
+        <div class="top-right-bar">
+          <p class="btn">Need Help</p>
+          <ion-icon
+            name="notifications-outline"
+            style="color: #cdcdcd; font-size: 20px"
+          ></ion-icon>
+          <img src="img/girl.jpg" style="height: 20px; border-radius: 2px" />
+        </div>
+        <div class="topper-box">
+          <div class="top-box">
+            <img
+              src="img/piechart.webp"
+              style="
+                width: 70px;
+                filter: sepia(100%) hue-rotate(-20deg) saturate(500%)
+                  brightness(110%);
+              "
+            />
+            <div class="inside-box">
+              <p style="font-size: 14px; color: #fefefe">Profile Completion</p>
+              <p style="font-size: 10px; color: #cdcdcd">
+                Please Complete profile
+              </p>
+              <p class="com-btn">COMPLETE</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="second-half"></div>
+    </section>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
