side bar and search done

--- a/index.html
+++ b/index.html
@@ -56,7 +56,95 @@
         </div>
       </div>
 
-      <div class="second-half"></div>
+      <div class="second-half">
+        <div class="side-bar">
+          <div class="aboutfam">
+            <div class="famtitle">
+              <p>ABOUT MY FAMILY</p>
+              <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="image">
+              <p class="imgtext">COVERED PERSON</p>
+              <div class="col--2">
+                <img src="img/cust1.jpeg" />
+                <img src="img/cust2.webp" />
+              </div>
+            </div>
+
+            <div class="image">
+              <p class="imgtext">BENEFICIARY PERSON</p>
+              <div class="col--3">
+                <img src="img/cust5.jpg" />
+                <img src="img/cust3.webp" />
+                <img src="img/girl.jpg" />
+              </div>
+            </div>
+
+            <div class="image">
+              <p class="imgtext">BENEFICIARY PERSON</p>
+              <div class="col--4">
+                <img src="img/cust3.webp" />
+                <img src="img/cust1.jpeg" />
+                <img src="img/cust5.jpg" />
+                <img src="img/cust2.webp" />
+              </div>
+            </div>
+          </div>
+          <div class="aboutme">
+            <div class="metitle">
+              <p>ABOUT ME</p>
+              <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
+            </div>
+            <div class="line"></div>
+            <div class="pair-2">
+              <p class="up">EMAIL</p>
+              <p>abc@gmail.com</p>
+            </div>
+            <div class="pair-2">
+              <p class="up">PHONE</p>
+              <p>9825374902</p>
+            </div>
+            <div class="pair-2">
+              <p class="up">ADDRESS</p>
+              <p>colony ,london (USA)</p>
+            </div>
+            <div class="pair-2">
+              <p class="up">PLAN</p>
+              <p>5.00 $</p>
+            </div>
+            <div class="pair-2">
+              <p class="up">JOINED</p>
+              <p>14 Feb , 2023</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="rightwala">
+          <div class="right-side">
+            <div class="top-nav">
+              <div class="dash">
+                <ion-icon name="home"></ion-icon>
+                <p>DASHBOARD</p>
+              </div>
+              <p>NEW CLAIMS</p>
+              <p>COMPLETED CLAIMS</p>
+              <p>PAST CLAIMS</p>
+              <p>MEMBERS</p>
+              <p>MY CLAIMS</p>
+              <p class="claimbtn">
+                <ion-icon
+                  name="wallet-outline"
+                  style="text-align: center"
+                ></ion-icon>
+                &nbspCLAIM
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script
