--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <ion-icon name="home"></ion-icon>
                 <p>DASHBOARD</p>
               </div>
-              <p>NEW CLAIMS</p>
+              <p>NEW CLAIM</p>
               <p>COMPLETED CLAIMS</p>
               <p>PAST CLAIMS</p>
               <p>MEMBERS</p>
