center part done

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <ion-icon name="home"></ion-icon>
                 <p>DASHBOARD</p>
               </div>
-              <p>NEW CLAIM</p>
+              <p>NEW CLAIMS</p>
               <p>COMPLETED CLAIMS</p>
               <p>PAST CLAIMS</p>
               <p>MEMBERS</p>
@@ -143,6 +143,88 @@
               </p>
             </div>
           </div>
+
+          <div class="box--3" style="margin-top: 30px">
+            <div class="boxs" id="box">
+              <p class="big-num">23</p>
+              <div class="inner--2">
+                <p>NEW CLAIMS</p>
+                  <div class="claim-imgs">
+                    <img src="img/cust1.jpeg" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust3.webp" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust2.webp" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust5.jpg" alt="claim-customer-images" class="claim-img">
+                    </div>
+              </div>
+            </div>
+
+              <div class="boxs" id="box">
+                <p class="big-num">76</p>
+                <div class="inner--2">
+                  <p>COMPLETED</p>
+                  <div class="claim-imgs">
+                    <img src="img/cust1.jpeg" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust3.webp" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust2.webp" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust5.jpg" alt="claim-customer-images" class="claim-img">
+                    </div>
+                </div>
+              </div>
+
+              <div class="boxs" id="box">
+                <p class="big-num">102</p>
+                <div class="inner--2">
+                  <p>TOTAL</p>
+                  <div class="claim-imgs">
+                    <img src="img/cust1.jpeg" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust3.webp" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust2.webp" alt="claim-customer-images" class="claim-img">
+                    <img src="img/cust5.jpg" alt="claim-customer-images" class="claim-img">
+                    </div>
+                </div>
+              </div>
+            </div>
+
+              <div class="long-box">
+                <div class="longy">
+                  <img src="img/cust1.jpeg">
+                  <div class="long-row">
+                    <p class="large">Khushi Shukla</p>
+                    <p><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Field</span> : Thus,6/9/24 </p>
+                    <p><ion-icon name="calendar-number-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Due</span> : Wed,10/7/26 </p>
+                    <p><ion-icon name="location-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Address</span> : Willongsson hall </p>
+                  </div>
+                  <p class="pay"><ion-icon name="pricetag-outline"></ion-icon> PAY</p>
+                </div>
+
+                <div class="longy">
+                  <img src="img/cust5.jpg">
+                  <div class="long-row">
+                    <p class="large">Rudra Shukla</p>
+                    <p><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Field</span> : Thus,6/9/24 </p>
+                    <p><ion-icon name="calendar-number-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Due</span> : Wed,10/7/26 </p>
+                    <p><ion-icon name="location-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Address</span> : Willongsson hall </p>
+                  </div>
+                  <p class="pay"><ion-icon name="pricetag-outline"></ion-icon> PAY</p>
+                </div>
+
+                <div class="longy">
+                  <img src="img/cust3.webp">
+                  <div class="long-row">
+                    <p class="large">Bhavu Shukla</p>
+                    <p><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Field</span> : Thus,6/9/24 </p>
+                    <p><ion-icon name="calendar-number-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Due</span> : Wed,10/7/26 </p>
+                    <p><ion-icon name="location-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Address</span> : Willongsson hall </p>
+                  </div>
+                  <p class="pay"><ion-icon name="pricetag-outline"></ion-icon> PAY</p>
+                </div>
+              </div>
+
+
+    
+          </div>
+
+          
         </div>
       </div>
     </section>
