--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="longy">
                   <img src="img/cust3.webp">
                   <div class="long-row">
-                    <p class="large">Bhavu Shukla</p>
+                    <p class="large">Bhavini Shukla</p>
                     <p><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Field</span> : Thus,6/9/24 </p>
                     <p><ion-icon name="calendar-number-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Due</span> : Wed,10/7/26 </p>
                     <p><ion-icon name="location-outline"></ion-icon>&nbsp <span style="color: #cdcdcd;">Address</span> : Willongsson hall </p>
