--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p class="btn">Need Help</p>
           <ion-icon
             name="notifications-outline"
-            style="color: #cdcdcd; font-size: 20px"
+            style="color: #cdcdcd; font-size: 20px;cursor: pointer;"
           ></ion-icon>
               <div class="yellow_dot"></div>
           <img src="img/girl.jpg" style="height: 20px; border-radius: 2px; object-fit: fill;" />
@@ -52,14 +52,17 @@
             </div>
             
             <div class="inside-box">
-              <p style="font-size: 14px; color: #fefefe">Profile Completion</p>
+              <p style="font-size: 12px; color: #fefefe">Profile Completion</p>
               <p style="font-size: 10px; color: #cdcdcd">
                 Please Complete profile
               </p>
               <p class="com-btn">COMPLETE</p>
             </div>
           </div>
+          
+        <ion-icon name="camera-outline" style="height: 20px;width: 20px; position: absolute;right: 210px;top: 250px;color: #fefefe;cursor: pointer;"></ion-icon>
         </div>
+
       </div>
 
       <div class="second-half">
@@ -140,7 +143,7 @@
               <p>PAST CLAIMS</p>
               <p>MEMBERS</p>
               <p>MY CLAIMS</p>
-              <p class="claimbtn">
+              <p class="claimbtn" style="border-bottom: 2px solid #0dd39d;">
                 <ion-icon
                   name="wallet-outline"
                   style="text-align: center"
