--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="long--2">
               <div class="long-box">
                 <div class="longy">
-                  <img src="img/cust1.jpeg">
+                  <img src="img/cust1.jpeg" style="height: 120px;">
                   <div class="long-row">
                     <p class="large">Khushi Shukla</p>
                     <p style="color: #a4a2a2a7;"><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #0b0b0b;">Field</span> : Thus,6/9/24 </p>
@@ -209,7 +209,7 @@
                 </div>
 
                 <div class="longy">
-                  <img src="img/cust5.jpg">
+                  <img src="img/cust5.jpg" style="height: 120px;">
                   <div class="long-row">
                     <p class="large">Rudra Shukla</p>
                     <p style="color: #a4a2a2a7;"><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #0b0b0b;">Field</span> : Thus,6/9/24 </p>
@@ -220,7 +220,7 @@
                 </div>
 
                 <div class="longy">
-                  <img src="img/cust3.webp">
+                  <img src="img/cust3.webp" style="height: 120px;">
                   <div class="long-row">
                     <p class="large">Bhavu Shukla</p>
                     <p style="color: #a4a2a2a7;"><ion-icon name="browsers-outline"></ion-icon>&nbsp <span style="color: #0b0b0b;">Field</span> : Thus,6/9/24 </p>
