--- a/index.html
+++ b/index.html
@@ -43,17 +43,9 @@
         </div>
         <div class="topper-box">
           <div class="top-box">
-            <div class="circular-progress">
-              <div class="circle">
-                <div class="mask full">
-                  <div class="fill"></div>
-                </div>
-                <div class="mask half">
-                  <div class="fill"></div>
-                  <div class="fill fix"></div>
-                </div>
-                <div class="inside-circle">75%</div>
-              </div>
+            <span class="border-progress"></span>
+            <div class="progress-circle">
+              <span class="progress-text">75%</span>
             </div>
             
             <div class="inside-box">
@@ -291,6 +283,24 @@
                 <div class="act">
                   <p class="act-sub-title child-3">3 Calims are waiting</p>
                   <p class="act-desc">Please contribute them, they are waiting for your help</p>
+                  <span class="act-time">05:40pm</span>
+                </div>
+
+                <div class="act">
+                  <p class="act-sub-title child-2">102 New Members</p>
+                  <p class="act-desc">We have 102 registereations check out their profiles</p>
+                  <span class="act-time">05:40pm</span>
+                </div>
+
+                <div class="act">
+                  <p class="act-sub-title child-2">102 New Members</p>
+                  <p class="act-desc">We have 102 registereations check out their profiles</p>
+                  <span class="act-time">05:40pm</span>
+                </div>
+
+                 <div class="act">
+                  <p class="act-sub-title child-2">102 New Members</p>
+                  <p class="act-desc">We have 102 registereations check out their profiles</p>
                   <span class="act-time">05:40pm</span>
                 </div>
 
